--- a/games.html
+++ b/games.html
@@ -19,7 +19,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">ISRA</a>
+      <a class="navbar-brand" href="./index.html">ISRA</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -29,7 +29,7 @@
             <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="./about.html">Our Referees</a>
+            <a class="nav-link" aria-current="page" href="./referees.html">Our Referees</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="./games.html">Upcoming Games</a>
