--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -17,20 +17,20 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="./index.html">ISRA</a>
+    <a class="navbar-brand" href="./index.html"><img src="img/favicon-32x32.png"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+          <a class="nav-link active" aria-current="page" href="./index.html">Finalized Games</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="./referees.html">Our Referees</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="./games.html">Upcoming Games</a>
+            <a class="nav-link" aria-current="page" href="./games.html">Our Games</a>
         </li>
       </ul>
     </div>
@@ -43,7 +43,6 @@
   <body>
 
     <div class="container">
-      <img src="img/ISRA.jfif" alt="football" class="image-responsive" width="50%" height="50%">
       <h1>Indiana Soccer Referees Association</h1><br>
       <div id="gameApp" class="row col-lg-12 text-center">
         <hr>
@@ -60,13 +59,16 @@
                 <tr v-for="game in games">
                   <td>{{ game.title }}</td>
                   <td>{{ game.field }}</td>
-                  <td>{{ game.date }}</td>
+                  <td>{{ prettyData(game.gDate)}} at {{game.time }}</td>
                   <td>{{ game.ref }}</td>
                 </tr>         
               </tbody>
         </table>
      </div>
+
+     <img src="img/ISRA.jfif" alt="football" class="image-responsive" width="50%" height="50%">
     </div>
+    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
     <script src="./js/index.js"></script>
   
   </body>
