--- a/app/public/referees.html
+++ b/app/public/referees.html
@@ -18,26 +18,26 @@
 </head>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="./index.html">ISRA</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="./referees.html">Our Referees</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="./games.html">Upcoming Games</a>
-          </li>
-        </ul>
-      </div>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="./index.html"><img src="img/favicon-32x32.png"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="./index.html">Finalized Games</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="./referees.html">Our Referees</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="./games.html">Our Games</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
@@ -45,7 +45,6 @@
   <body>
 
   <div id="offerApp" class="container row col-lg-12 text-center">
-    <img src="img/ISRA_referees.jpg" alt="referees" class="image-responsive" height="500 px">
       <hr>
       <table class="table table-hover table-light" >
           <thead>
@@ -113,6 +112,7 @@
   </div>
   </form>
 </div>
+<img src="img/ISRA_referees.jpg" alt="referees" class="image-responsive" height="500 px">
 
 <script src="./js/index.js"></script>
 </body>
