--- a/app/public/games.html
+++ b/app/public/games.html
@@ -26,6 +26,9 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="./home.html">Home</a>
+      </li>
+        <li class="nav-item">
           <a class="nav-link" aria-current="page" href="./index.html">Finalized Games</a>
         </li>
         <li class="nav-item">
@@ -43,6 +46,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
  
   <body>
+    <div class="body">
     <div class = "d-flex justify-content-center">
 
     <div id="gameApp" class="container row col-lg-12 text-center">
@@ -179,6 +183,7 @@
     <script src="./js/game.js"></script>
 
   </div>
+</div>
 </body>
   
 <footer>
