--- a/app/public/games.html
+++ b/app/public/games.html
@@ -37,6 +37,9 @@
         <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="./games.html">Our Games</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="./reports.html">Your Reports</a>
+      </li>
       </ul>
     </div>
   </div>
