finished first report

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -29,14 +29,14 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="./home.html">Home</a>
                 </li>
-                <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Finalized Games</a>
-            </li>
             <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="./referees.html">Our Referees</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="./games.html">Our Games</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="./reports.html">Reports</a>
             </li>
             </ul>
         </div>
