--- a/app/public/referees.html
+++ b/app/public/referees.html
@@ -19,29 +19,26 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="./index.html"><img src="img/favicon-32x32.png"></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <a class="navbar-brand" href="./home.html"><img src="img/favicon-32x32.png"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="./home.html">Home</a>
-      </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="./index.html">Finalized Games</a>
-        </li>
-        <li class="nav-item">
+          <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="./home.html">Home</a>
+          </li>
+      <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="./referees.html">Our Referees</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="./games.html">Our Games</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="./reports.html">Your Reports</a>
       </li>
+      <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="./games.html">Our Games</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" aria-current="page" href="./reports.html">Reports</a>
+    </li>
       </ul>
-    </div>
+  </div>
   </div>
 </nav>
 
@@ -166,7 +163,7 @@
 
 </div>
 </div>
-<img src="img/ISRA_referees.jpg" alt="referees" class="image-responsive" height="500 px">
+
 
 <script src="./js/referee.js"></script>
 </div>
