--- a/app/public/reports.html
+++ b/app/public/reports.html
@@ -46,11 +46,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
  
   <body>
-
+  <div class="body">
   <div id="repsApp">
         <div class = "reports">
           <form v-on:submit.prevent="fetchGamesData()">
-            <span class="refs">Select a Referee</span><br>
+            <span class="refs">Referee assignments within a date range</span><br><br>
           <label for="refID" class="col-sm-2 col-form-label">Referee</label>
           <select name="refs" id="refID" v-model="refereeForm.refID" class = "btn btn-secondary dropdown-toggle">
           <option v-bind:value="r.refID" v-for="r in refs">{{r.fName}} {{r.lName}}</option>
@@ -85,11 +85,18 @@
                 </tr>
             </tbody>
         </table>
-        <p><a class = "reports" v-bind:href="'/api/reports/?ref=' + selectedReferee + '&startDate=' + refereeForm.startDate + '&endDate=' + refereeForm.endDate + '&format=csv'" download>Export as CSV</a></p><hr>
+        <p><a class = "reports" v-bind:href="'/api/reports/?ref=' + selectedReferee + '&startDate=' + refereeForm.startDate + '&endDate=' + refereeForm.endDate + '&format=csv'" download>Export as CSV</a></p>
       </div>
-        <p><a v-bind:href="'/api/reports/?ref=' + selectedReferee + '&format=csv'" download>Export as CSV</a></p>
-    
-        <hr>
+
+        <br><div class = "reports">
+         <hr> <span class="refs">Games without any referees assigned</span><br><br>
+        <form v-on:submit.prevent="fetchGameData()">
+          <button type="submit" class="btn btn-outline-secondary btn-sm">Generate Report</button>
+        </form>
+      </div>
+
+
+        <div v-if="reportTwo" class = "reports"> 
             <table id="" class="table table-hover table-light" >
                 <thead>
                     <tr>
@@ -105,15 +112,13 @@
                       <td>{{ g.gDate }} at {{ g.time }}</td>
                     </tr>         
                   </tbody>
-                  <form v-on:submit.prevent="fetchGameData()">
-                    <button type="submit" class="btn btn-outline-secondary btn-sm">Generate Report</button>
-                  </form>
-                  <p><a href="/api/reports/unassigned.php/?&format=csv" download>Export as CSV</a></p>
             </table>
+            <p><a href="/api/reports/unassigned.php/?&format=csv" download>Export as CSV</a></p>
+        </div>
     </div>
-  </div>
 
     <script src="./js/reports.js"></script>
+  </div>
 </body>
 
 <footer>
