--- a/app/public/referees.html
+++ b/app/public/referees.html
@@ -19,14 +19,14 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-      <a class="navbar-brand" href="./home.html"><img src="img/favicon-32x32.png"></a>
+      <a class="navbar-brand" href="./index.html"><img src="img/favicon-32x32.png"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="./home.html">Home</a>
+              <a class="nav-link" aria-current="page" href="./index.html">Home</a>
           </li>
       <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="./referees.html">Our Referees</a>
@@ -110,7 +110,6 @@
                 <span class="gameName">{{ a.status }}</span><br>
                 <label for="status" class="col-sm-2 col-form-label">Status:</label>
                 <select id="status" v-model="refForm.status">
-                  <option v-bind:value= "a.status" selected></option>
                   <option value = "Accepted"> Accept </option>
                   <option value = "Tenative"> Tenative </option>
                   <option value = "Declined"> Decline </option>
