Hopefully final fixes

--- a/app/public/referees.html
+++ b/app/public/referees.html
@@ -124,7 +124,7 @@
           <div class="form-item-format row mb-2">
             <label for="fName" class="col-sm-2 col-form-label">First Name</label>
             <div class="col-sm-10">
-              <input type="text" v-model="editForm.fName" class="form-control" placeholder="fName" id="refereefName">
+              <input type="text" v-model="editForm.fName" class="form-control" placeholder="fName" id="fName">
             </div>
           </div>
           <div class="form-item-format row mb-2">
